Moved assets folder